--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -10,4 +10,11 @@
         <Compile Remove="Class1.cs"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="CSharpier.MsBuild" Version="0.27.3">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
