--- a/PixelApi/PixelApi.csproj
+++ b/PixelApi/PixelApi.csproj
@@ -11,6 +11,10 @@
     <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' "/>
     <ItemGroup>
         <PackageReference Include="AspNetCore.HealthChecks.Rabbitmq" Version="8.0.0"/>
+        <PackageReference Include="CSharpier.MsBuild" Version="0.27.3">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1"/>
         <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.0-develop.1682"/>
     </ItemGroup>
