--- a/StorageService/StorageService.csproj
+++ b/StorageService/StorageService.csproj
@@ -11,6 +11,10 @@
     <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' "/>
     <ItemGroup>
         <PackageReference Include="AspNetCore.HealthChecks.Rabbitmq" Version="8.0.0"/>
+        <PackageReference Include="CSharpier.MsBuild" Version="0.27.3">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.0-develop.1682"/>
         <PackageReference Include="Serilog.AspNetCore" Version="8.0.1"/>
         <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0"/>
