--- a/PixelApi/PixelApi.csproj
+++ b/PixelApi/PixelApi.csproj
@@ -23,6 +23,7 @@
         <Compile Remove="Domain\Notification.cs"/>
         <Compile Remove="Domain\HttpRequestCreated.cs"/>
         <Compile Remove="Domain\**"/>
+        <Compile Remove="Middlewares\HttpRequestDateTimeMiddleware.cs" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\Common\Common.csproj"/>
@@ -33,7 +34,7 @@
     <ItemGroup>
         <Content Remove="Domain\**"/>
         <Content Include="..\.dockerignore">
-            <Link>.dockerignore</Link>
+          <Link>.dockerignore</Link>
         </Content>
     </ItemGroup>
     <ItemGroup>
