feat: refactored fileservice into the consumer

--- a/StorageService/appsettings.json
+++ b/StorageService/appsettings.json
@@ -13,6 +13,18 @@
       "Path": "/tmp/visits.log"
     }
   },
+  "Serilog": {
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "/tmp/visits.log",
+          "rollingInterval": "Infinite",
+          "outputTemplate": "{Message}{NewLine}"
+        }
+      }
+    ]
+  },
   "AllowedHosts": "*"
 }
 
