--- a/StorageService/StorageService.csproj
+++ b/StorageService/StorageService.csproj
@@ -12,11 +12,13 @@
     <ItemGroup>
         <PackageReference Include="AspNetCore.HealthChecks.Rabbitmq" Version="8.0.0"/>
         <PackageReference Include="CSharpier.MsBuild" Version="0.27.3">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.0-develop.1682"/>
         <PackageReference Include="Serilog.AspNetCore" Version="8.0.1"/>
+        <PackageReference Include="Serilog.Settings.AppSettings" Version="2.2.3-dev-00066"/>
+        <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.1-dev-00572"/>
         <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0"/>
         <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00972"/>
     </ItemGroup>
@@ -27,8 +29,11 @@
         <Compile Remove="Services\MassTransitService.cs"/>
     </ItemGroup>
     <ItemGroup>
-      <Content Include="..\.dockerignore">
-        <Link>.dockerignore</Link>
-      </Content>
+        <Content Include="..\.dockerignore">
+            <Link>.dockerignore</Link>
+        </Content>
+    </ItemGroup>
+    <ItemGroup>
+        <Folder Include="Services\"/>
     </ItemGroup>
 </Project>
