--- a/src/PixelApi/PixelApi.csproj
+++ b/src/PixelApi/PixelApi.csproj
@@ -33,8 +33,8 @@
     </ItemGroup>
     <ItemGroup>
         <Content Remove="Domain\**"/>
-        <Content Include="..\.dockerignore">
-            <Link>.dockerignore</Link>
+        <Content Include="..\..\.dockerignore">
+          <Link>.dockerignore</Link>
         </Content>
     </ItemGroup>
     <ItemGroup>
