--- a/src/PixelApi/PixelApi.csproj
+++ b/src/PixelApi/PixelApi.csproj
@@ -17,6 +17,7 @@
         </PackageReference>
         <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1"/>
         <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.0-develop.1682"/>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.2" />
     </ItemGroup>
     <ItemGroup>
         <Compile Remove="Domain\HttpRequestLogNotification.cs"/>
