--- a/src/StorageService/.csharpierrc.yaml
+++ b/src/StorageService/.csharpierrc.yaml
@@ -2,6 +2,8 @@ printWidth: 100
 useTabs: false
 tabWidth: 4
 endOfLine: auto
+spacesBeforeConditional: true
+spacesAroundLambdaArrow: before
 preprocessorSymbolSets:
   - ""
   - "DEBUG"
