fix: fix file logger

--- a/src/StorageService/appsettings.json
+++ b/src/StorageService/appsettings.json
@@ -8,19 +8,22 @@
   "ConnectionStrings": {
     "RabbitMq": "amqp://guest:guest@rabbitmq:5672"
   },
-  "Storage": {
-    "File": {
-      "Path": "/tmp/visits.log"
-    }
-  },
   "Serilog": {
     "WriteTo": [
       {
-        "Name": "File",
+        "Name": "Async",
         "Args": {
-          "path": "/tmp/visits.log",
-          "rollingInterval": "Infinite",
-          "outputTemplate": "{Message}{NewLine}"
+          "blockWhenFull": true,
+          "configure": [
+            {
+              "Name": "File",
+              "Args": {
+                "path": "/tmp/visits.log",
+                "rollingInterval": "Infinite",
+                "outputTemplate": "{Message}{NewLine}"
+              }
+            }
+          ]
         }
       }
     ]
